# VertexFlowLauncher

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
VertexFlowLauncher/: CMakeLists.txt
VertexFlowLauncher/src/: main.cpp
VertexFlowLauncher/src/core/: Config.h
VertexFlowLauncher/src/platform/windows/: WindowManager.cpp  WindowManager.h
VertexFlowLauncher/src/utils/logging/: Log.cpp  Log.h
